--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "lint-staged": "^13.1.0",
     "parcel": "^2.8.3",
+    "prettier": "^2.8.3",
     "rimraf": "^4.1.1"
   }
 }
